# orange

./: .gitignore  DOCUMENTATION_STATUS.md  Dockerfile  Makefile  PyWhatKit_DB.txt  README.md  build.sh  chat_history.txt  config.json  docker-compose.yml  pyproject.toml  requirements.txt  start.ps1  start.sh  test.py
.github/workflows/: python-app.yml
Docs/style_docs/: styles.md
compile/: build.py
docs/: BUILD_OPTIMIZATION_GUIDE.md  CYTHON_VALIDATION_REPORT.md  ROADMAP.md  TEST_REPORT.md  falsos_positivos.md
laranja/: README.md  mkdocs.yml
laranja/Laranja/: clean.py  collor.py  laranja.py  theme.py
laranja/Laranja/BD/: __init__.py
laranja/docs/: index.md
laranja/test/: test_laranja.py
main/: laranja.py
reload/: reload.py
scripts/: clean-imports.py  install.sh  sync_deps.py  watch.py  watch_and_reload.py
src/: README.md  collor.py  laranja.py  test.py
src/Graphic/: __init__.py
src/clean/: __init__.py
src/compile/: build.py
src/components/: BackgroundChanger.py  CacheTimerControls.py  LayoutSettingsDialog.py  editor.c  editor.py  file_operations.c  file_operations.py  ui_elements.c  ui_elements.py  utils.c
src/config/: background.py  choose.py  clean.py  config.json  save_user_config.py  themes.py
src/core/: Clients.csv  Clients.csv:Zone.Identifier  Clientstestes.csv  UPAmain.py  Umain.py  exchange_rate.py  main.c  main.py  main2.py  radius_exange.py  reload.py  teste.csv  whatsapp_gui.py  whatsapp_thread.py
src/graphic/: __init__.py
src/theme/: __init__.py
tests/: test_main_app.py  test_performance.py
tests/application/: conftest.py
tests/framework/: test_build_helpers.py  test_build_pipeline.py  test_watch_mode.py
