[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "orange-micro-framework"
version = "0.1.129"
description = "Framework to compile Python projects with Cython and bundle executables using PyInstaller, including path corrections."
authors = [ "Anderson Rodrigues <eusouanderson@outlook.com>",]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/eusouanderson/orange-micro-framework"
repository = "https://github.com/eusouanderson/orange-micro-framework"
keywords = [ "cython", "pyinstaller", "python-packager", "compiler", "executable",]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
pyside6 = "^6.8.0.2"
watchdog = "^6.0.0"
pyinstaller = "^6.11.1"
black = "^24.10.0"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
requests-html = "^0.10.0"
websockets = "8.1"
pyaudio = "^0.2.14"
pypdf2 = "^3.0.1"
python-docx = "^1.1.2"

[tool.poetry.dependencies.lxml]
extras = [ "html-clean",]
version = "^5.3.0"

[tool.poetry.group.dev.dependencies]
cython = "^3.0.11"
