[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "orange-micro-framework"
version = "0.1.145"
description = "Framework to compile Python projects with Cython and bundle executables using PyInstaller, including path corrections."
authors = [ "Anderson Rodrigues <eusouanderson@outlook.com>",]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/eusouanderson/orange-micro-framework"
repository = "https://github.com/eusouanderson/orange-micro-framework"
keywords = [ "cython", "pyinstaller", "python-packager", "compiler", "executable",]

packages = [
    { include = "core", from = "src" },
    { include = "components", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
pandas = "*"
pyautogui = "*"
pywhatkit = "*"
pyqt6 = "^6.9.1"

[tool.poetry.group.dev.dependencies]
cython = "^3.0.11"
ruff = "^0.11.13"
pytest = "^8.4.0"
pytest-cov = "^6.2.1"
taskipy = "^1.14.1"
deptry = "^0.23.0"
tomlkit = "^0.13.3"
watchdog = "^6.0.0"
tomli = "^2.2.1"
pyinstaller = "^6.14.1"

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']


[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']
ignore = ["PLR6301", "PLR0917", "PLR0913"]

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--cov=fastapi_zero --cov-report=term-missing -p no:warnings"

[tool.taskipy.tasks]
lint = 'ruff check'
pre_format = 'ruff check --fix'
format = 'ruff format'
run = './start.sh'
pre_test = 'task lint'
test = 'pytest -s -x --cov=fast_zero -vv'
post_test = 'coverage html'
sync-deps = "python scripts/sync_deps.py"
dev = "python scripts/watch_and_reload.py"