[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "orange-micro-framework"
version = "0.1.148"
description = "Framework to compile Python projects with Cython and bundle executables using PyInstaller, including path corrections."
authors = [ "Anderson Rodrigues <eusouanderson@outlook.com>",]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/eusouanderson/orange-micro-framework"
repository = "https://github.com/eusouanderson/orange-micro-framework"
keywords = [ "cython", "pyinstaller", "python-packager", "compiler", "executable",]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
pandas = "^2.2.3"
PyQt6 = "^6.8.0"

[tool.poetry.group.dev.dependencies]
cython = "^3.0.11"
colorama = "^0.4.6"
tomli = "^2.2.1"
pyinstaller = "^6.14.2"
black = "^25.1.0"
pytest = "^8.3.4"
watchdog = "^4.0.0"
pytest-cov = "^7.0.0"

[tool.taskipy.tasks]
test = "pytest"
format = "black ."
cythonize = "cythonize -i src/**/*.py"
run = "python src/core/main.py"
build = "python compile/build.py linux v0.1.145 --compile-all"
clean_imp  = "python scripts/clean-imports.py"
clean= "rm -rf build dist *.spec __pycache__ .pytest_cache"
watch = "watchmedo shell-command --patterns='*.py' --recursive --command='task run' src/"
